--- a/app/src/main/res/layout/login_layout.xml
+++ b/app/src/main/res/layout/login_layout.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -44,17 +45,30 @@
                 android:text="requestorId:"/>
 
             <EditText
-                android:id="@+id/isSignedIn_requestorId"
+                android:id="@+id/login_requestorId"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="text"
                 android:hint="Enter Requestor Id Value Here"
                 android:text=""/>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <Button
+                    android:id="@+id/btn_login_ok"
+                    style="@style/ButtonStyle"
+                    android:text="OK"/>
+
+                <Button
+                    android:id="@+id/btn_login_back"
+                    style="@style/ButtonStyle"
+                    android:text="BACK"/>
+            </LinearLayout>
+
         </LinearLayout>
     </LinearLayout>
-
-
 
 
 </RelativeLayout>
