--- a/app/src/main/res/layout/issignedin_layout.xml
+++ b/app/src/main/res/layout/issignedin_layout.xml
@@ -35,7 +35,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="text"
-                android:hint="Enter rId Value Here"
+                android:hint="Enter rId Value Here (Can be Empty)"
                 android:text=""/>
 
             <LinearLayout
