--- a/app/src/main/res/layout/about_clientless_layout.xml
+++ b/app/src/main/res/layout/about_clientless_layout.xml
@@ -27,7 +27,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/header_text_size"
-                android:text="Descriptions of what Clientless Here"/>
+                android:text="Descriptions of what Clientless is Here"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
