Saving rId now works. Added a save rId button next to the edit text field.

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -83,6 +83,11 @@
                         android:hint="Enter Requestor Id"
                         android:text=""/>
 
+                    <Button
+                        android:id="@+id/btn_rId"
+                        style="@style/ButtonStyle"
+                        android:text="Save rId"/>
+
                 </LinearLayout>
 
             </LinearLayout>
