--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -43,7 +43,9 @@
     <style name="FormValues">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:textSize">@dimen/header_text_size</item>
+        <item name="android:textSize">@dimen/form_text_size</item>
+        <item name="android:textColor">@color/colorPrimaryDark</item>
+        <item name="android:textStyle">bold</item>
     </style>
     <style name="FormEditText">
         <item name="android:layout_width">match_parent</item>
