--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,5 +2,6 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="header_text_height">40dp</dimen>
     <dimen name="header_text_size">20dp</dimen>
+    <dimen name="form_text_size">17dp</dimen>
     <dimen name="paddingLR">20dp</dimen>
 </resources>
