--- a/app/src/main/res/layout/fragment_provider_picker.xml
+++ b/app/src/main/res/layout/fragment_provider_picker.xml
@@ -6,10 +6,39 @@
     android:orientation="vertical"
     android:background="@android:color/white">
 
-    <ListView
-        android:id="@android:id/list"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
-    </ListView>
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="end">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:orientation="horizontal">
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_weight="1" />
+
+            <Button
+                android:id="@+id/btn_mvpd_frag_cancel"
+                android:layout_width ="50dp"
+                android:layout_height="50dp"
+                android:text="X"
+                android:textStyle="bold" />
+
+        </LinearLayout>
+
+        <ListView
+            android:id="@android:id/list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+        </ListView>
+
+    </LinearLayout>
+
+
 
 </LinearLayout>
