--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,6 +4,7 @@
     <dimen name="header_text_size">20dp</dimen>
     <dimen name="form_text_size">17dp</dimen>
     <dimen name="paddingLR">20dp</dimen>
+    <dimen name="descriptions_size">25dp</dimen>
 
     <dimen name="premium_logo_width">113dp</dimen>
     <dimen name="premium_logo_height">60dp</dimen>
