--- a/app/src/main/res/layout/login_layout.xml
+++ b/app/src/main/res/layout/login_layout.xml
@@ -54,7 +54,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/descriptions_size"
-                android:text="Select Mvpd Id Here"/>
+                android:text="Select Mvpd Here"/>
 
 
             <LinearLayout
@@ -66,7 +66,7 @@
                     android:id="@+id/mvpd_value_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="@dimen/header_text_size"
+                    android:textSize="@dimen/form_text_size"
                     android:text="mvpdId Selected: "/>
 
                 <TextView
