Converted adobe auth activity to use hashmap.  Added missing adobe auth form value tempPassSelection. Refactored SetUpUtils by removing methods that used the value names string array.

--- a/app/src/main/res/layout/adobe_auth_layout.xml
+++ b/app/src/main/res/layout/adobe_auth_layout.xml
@@ -259,8 +259,20 @@
                                 android:id="@+id/nbcTokenurl"
                                 style="@style/FormEditText"/>
                         </LinearLayout>
+
                     </LinearLayout>
                 </HorizontalScrollView>
+                <LinearLayout
+                    style="@style/FormEntries">
+                    <TextView
+                        style="@style/FormValues"
+                        android:text="@string/authForm18_tempPassSelection"/>
+
+                    <EditText
+                        android:id="@+id/tempPassSelection"
+                        android:hint="TempPassSelectionConfig Object"
+                        style="@style/FormExpandText"/>
+                </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
