--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -52,5 +52,12 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:inputType">text</item>
     </style>
+    <style name="FormExpandText">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:inputType">textCapSentences|textMultiLine</item>
+        <item name="android:maxLines">4</item>
+    </style>
 
 </resources>
